Highlight comment changes in visual diff and fix whitespace
When displaying changed/removed/inserted nodes in the diff,
set forClipboard to true in getDomFromModel, so that we can
show invisible nodes such as comments.

This also fixes a long-standing whitespace problem, and
updates tests to expect the correct diff.

Bug: T149821
Bug: T158895

--- a/src/ui/styles/elements/ve.ui.DiffElement.css
+++ b/src/ui/styles/elements/ve.ui.DiffElement.css
@@ -42,6 +42,15 @@ figure.ve-ui-diffElement-remove > figcaption {
 	display: none;
 }
 
+.ve-ui-diffElement-insert [rel='ve:Comment'],
+.ve-ui-diffElement-remove [rel='ve:Comment'],
+.ve-ui-diffElement-change-insert [rel='ve:Comment'],
+.ve-ui-diffElement-change-remove [rel='ve:Comment'] {
+	width: 10px;
+	background-color: #8ab4e8 !important; /* stylelint-disable-line declaration-no-important */
+	box-shadow: 0 0 0 0.1em #8ab4e8;
+}
+
 .ve-ui-diffElement-remove + .ve-ui-diffElement-insert,
 .ve-ui-diffElement-insert + .ve-ui-diffElement-remove,
 .ve-ui-diffElement-remove + .ve-ui-diffElement-change-insert,
